prevent image wrap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,3 +21,7 @@ nav {
 }
 
 
+#header_wrap{
+	overflow:hidden;
+
+}
